--- a/index.html
+++ b/index.html
@@ -12,22 +12,42 @@
   <header>
     <nav>
       <div class="container">
-        <a href="#">
-          <img src="./src/images/logo.svg" alt="logo">
-        </a>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Events</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Contact</a></li>
+        <div class="nav">
           <a href="#">
-            <i class="fa-solid fa-phone fa-shake" style="color: #ffffff;"></i>
-            +1 (000) 000 000
+            <img src="./src/images/logo.svg" alt="logo">
           </a>
-        </ul>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Events</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Contact</a></li>
+            <a class="btn" href="#">
+              <i class="fa-solid fa-phone fa-shake" style="color: #ffffff;"></i>
+              <span>+1 (000) 000 000</span>
+            </a>
+          </ul>
+        </div>
       </div>
     </nav>
+    <div class="container">
+      <div class="head__big">
+        <div class="head">
+          <h1>
+            <span>Life is a journey,</span>
+           not a destination
+        </h1>
+        <p>
+          Let’s start your journey with us, your dream will come true...
+        </p>
+        <div class="head__btn">
+          <a class="btn" href="#">Explore Destinations</a>
+          <p><span><i class="fa-solid fa-play fa-beat" style="color: #23BDEE;"></i></span> Watch how it works</p>
+        </div>
+      </div>
+      <img src="./src/images/head_img.png" alt="trip" width="700px">
+    </div>
+    </div>
   </header>
   <main></main>
   <footer></footer>
