--- a/index.html
+++ b/index.html
@@ -49,7 +49,30 @@
     </div>
     </div>
   </header>
-  <main></main>
+  <main>
+    <div class="container">
+      <div class="main__top">
+        <h2>Check Our Best Promotional Tour</h2>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+      </div>
+      <div class="main__center">
+        <i class="fa-solid fa-chevron-left fa-beat fa-lg" style="color: #666666;"></i>
+        <div>
+        <img src="src/images/img3.png" alt="trip" width="430px">
+        <p>Beijing</p>
+        </div>
+        <div>
+        <img src="src/images/img3.png" alt="trip" width="430px">
+        <p>Beijing</p>
+        </div>
+        <div>
+        <img src="src/images/img3.png" alt="trip" width="430px">
+        <p>Beijing</p>
+        </div>
+        <i class="fa-solid fa-chevron-right fa-beat fa-lg" style="color: #666666;"></i>
+      </div>
+    </div>
+  </main>
   <footer></footer>
 
 </body>
