--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/main.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Travelline</title>
 </head>
+
 <body>
 
   <header>
@@ -35,46 +39,85 @@
         <div class="head">
           <h1>
             <span>Life is a journey,</span>
-           not a destination
-        </h1>
-        <p>
-          Let’s start your journey with us, your dream will come true...
-        </p>
-        <div class="head__btn">
-          <a class="btn" href="#">Explore Destinations</a>
-          <p><span><i class="fa-solid fa-play fa-beat" style="color: #23BDEE;"></i></span> Watch how it works</p>
+            not a destination
+          </h1>
+          <p>
+            Let’s start your journey with us, your dream will come true...
+          </p>
+          <div class="head__btn">
+            <a class="btn" href="#">Explore Destinations</a>
+            <p><span><i class="fa-solid fa-play fa-beat" style="color: #23BDEE;"></i></span> Watch how it works</p>
+          </div>
         </div>
+        <img src="./src/images/head_img.png" alt="trip" width="700px">
       </div>
-      <img src="./src/images/head_img.png" alt="trip" width="700px">
-    </div>
     </div>
   </header>
   <main>
     <div class="container">
       <div class="main__top">
         <h2> <span>Check Our Best</span> Promotional Tour</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+          industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+          scrambled it to make a type specimen book.</p>
       </div>
       <div class="main__center">
         <i class="fa-solid fa-chevron-left fa-beat fa-lg" style="color: #666666;"></i>
         <div class="main__center_title">
-        <img src="src/images/img3.png" alt="trip" width="430px">
-        <p>Beijing</p>
+          <img src="src/images/img3.png" alt="trip" width="430px">
+          <p>Beijing</p>
         </div>
         <div class="main__center_title">
-        <img src="src/images/img3.png" alt="trip" width="430px">
-        <p>Beijing</p>
+          <img src="src/images/img3.png" alt="trip" width="430px">
+          <p>Beijing</p>
         </div>
         <div class="main__center_title">
-        <img src="src/images/img3.png" alt="trip" width="430px">
-        <p>Beijing</p>
+          <img src="src/images/img3.png" alt="trip" width="430px">
+          <p>Beijing</p>
         </div>
         <i class="fa-solid fa-chevron-right fa-beat fa-lg" style="color: #666666;"></i>
       </div>
     </div>
   </main>
-  <footer></footer>
+  <footer>
+    <div class="container">
+      <div class="footer">
+        <h2>
+          <span>Globally</span> Accepted
+        </h2>
+        <h3>
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+          standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
+          make a type specimen book.
+        </h3>
+        <div class="footer__img">
+          <div class="footer__img-1">
+            <img src="/src/images/bg1.png" alt="images" width="600px">
+            <p>
+              For Domestic
+              <br>
+              <a href="#">
+                Start trip today
+              </a>
+            </p>
+          </div>
+          <div class="footer__img-1">
+            <img src="/src/images/bg1.png" alt="images" width="600px">
+            <p>
+              For Domestic
+              <br>
+              <a href="#">
+                Start trip today
+              </a>
+            </p>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </footer>
 
 
 </body>
+
 </html>
