--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Travelline</title>
 </head>
-
 <body>
-
   <header>
     <nav>
       <div class="container">
@@ -116,8 +114,6 @@
       </div>
     </div>
   </footer>
-
-
+  <script src="./app.js"></script>
 </body>
-
 </html>
